fixed deprecated variable call in erb

--- a/templates/nagios_host.erb
+++ b/templates/nagios_host.erb
@@ -23,7 +23,7 @@ define host {
         <%- end -%>
         <%- if @custom_variables and @custom_variables != "" -%>
         #custom variables
-        <%- custom_variables.split(',').each do | custom_variable | -%>
+        <%- @custom_variables.split(',').each do | custom_variable | -%>
         <%= custom_variable %>
         <%- end -%>
         <%- end -%>
